# wizard

./: .gitignore  README.md  pyproject.toml
wizard/: algorithms.py  main.py  visualizer.py
