[tool.poetry]
name = "wizard"
version = "0.1.0"
description = "A matplotlib-based sorting visualizer."
authors = ["Shravan Asati <dev.shravan@protonmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
