[tool.poetry]
name = "wizard-av"
version = "0.1.0"
description = "A matplotlib-based sorting visualizer."
authors = ["Shravan Asati <dev.shravan@protonmail.com>"]
readme = "README.md"
package-mode = true
license = "MIT"
repository = "https://github.com/shravanasati/wizard"
keywords = ["sorting", "algorithm", "visualizer"]

[tool.poetry.scripts]
wizard = "wizard-av.main:main"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.0.1"
sv-ttk = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
